[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.1"}
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
alembic = "^1.15.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

